# ember

./: .dockerignore  .env.example  .gitignore  DEMO_GUIDE.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  pyproject.toml  run_tests.sh
backend/app/: __init__.py  agent.py  auth.py  auth_store.py  brief.py  catalog.py  catalog_store.py  config.py  dev_admin.py  errors.py  ingest.py  lm_studio.py  main.py  prompts.py  router.py  search.py  semantic_agent.py  state.py  vector_store.py
backend/tests/: test_api.py  test_brief_agent.py  test_budget.py  test_catalog.py  test_catalog_store.py  test_config.py  test_dependencies.py  test_dev_admin.py  test_ingest.py  test_router.py  test_search.py  test_semantic_agent.py  test_vector_store.py
docs/superpowers/plans/: 2026-05-15-pgvector-catalog-search.md  2026-05-15-supabase-auth.md
docs/superpowers/specs/: 2026-05-15-supabase-auth-design.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  authClient.js  styles.css  supabaseClient.js
frontend/tests/: smoke.test.mjs
supabase/: config.toml
